--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+ "postinstall": "ng build --aot -prod",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot -prod"
+   
   },
   "private": true,
   "dependencies": {
