--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": ["../../node_modules/jquery/dist/jquery.min.js",
-              "../src/assets/js/auth.js"],
+            "scripts": ["../node_modules/jquery/dist/jquery.min.js"],
             "es5BrowserSupport": true
           },
           "configurations": {
