--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^7.2.13",
     "@angular/platform-browser-dynamic": "^7.2.13",
     "@angular/router": "^7.2.13",
+    "@types/jquery": "^3.3.29",
     "core-js": "^2.5.4",
     "jquery": "^3.4.0",
     "rxjs": "~6.3.3",
