--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "preinstall": "npm install -g @angular/cli @angular/compiler-cli typescript",
- "heroku-postbuild": "ng build --prod",
+    "heroku-postbuild": "ng build --prod",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
@@ -13,21 +13,21 @@
   },
   "private": true,
   "dependencies": {
-
     "@angular/common": "^7.2.13",
     "@angular/compiler": "^7.2.13",
     "@angular/core": "^7.2.13",
     "@angular/forms": "^7.2.13",
+    "@angular/material": "^8.0.0",
     "@angular/platform-browser": "^7.2.13",
     "@angular/platform-browser-dynamic": "^7.2.13",
     "@angular/router": "^7.2.13",
     "core-js": "^2.5.4",
+    "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-
     "@angular-devkit/build-angular": "^0.13.8",
     "@angular/cli": "^7.3.8",
     "@angular/compiler-cli": "^7.2.13",
