--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ngx-cookie-service": "^2.2.0",
     "ngx-countdown": "^3.2.0",
     "ngx-countdown-timer": "^0.1.9",
+    "ngx-twitter-timeline": "^0.1.5",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
